--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <meta charset = "utf-8" >
     <meta name = "viewport" content="width = device - width, initial scale = 1.0 ">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Omkar Kesarkhane</title>
 
     </head>
